// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SpotlightBackdrop > gradient-mesh snapshot for accent=cyan 1`] = `
"<!--
    Workstream hero-spotlight — v1.1-polish Phase 01 (HSB-V11-CC-01).

    Two-variant decorative backdrop that sits behind a spotlight card's
    foreground content. ALL elements are aria-hidden + pointer-events-none
    so they're invisible to assistive tech and inert to the cursor.

    Variants:
      poster-blur    — Renders a blurred + tinted <img> from \`posterUrl\`.
                       Reuses the card's existing poster URL — browser
                       cache hit. (Threat T-V11-01 in the plan threat
                       register.)
      gradient-mesh  — Renders an \`accent\`-tinted radial-gradient mesh.
                       No HTTP request.

    Both variants are overlaid with a shared right-side vignette so the
    foreground text (which sits on the left/center) stays readable.

    If \`variant === 'poster-blur'\` but \`posterUrl\` is missing/empty, we
    fall back to the gradient-mesh of the same accent so the card never
    renders against a fully transparent background.
  -->
<div data-v-92a4d159="" class="absolute inset-0 overflow-hidden pointer-events-none">
  <!-- DS shimmer while a COLD blur poster loads (2026-06-11 feedback:
         «скелетона нет на фоне») — warm URLs (session registry) skip it so
         carousel re-mounts never replay the loading state. -->
  <!--v-if-->
  <!-- Keyed wrapper + non-out-in Transition = CROSSFADE when the poster
         URL changes in place (RandomTail reroll, 2026-06-11): old blur
         fades out while the new (preloaded by the card) fades in — no
         re-fetch flash. The 0.4 opacity lives on the wrapper so the
         transition classes can animate it (an inline opacity on the <img>
         would beat the enter/leave classes). -->
  <transition-stub data-v-92a4d159="" name="backdrop-x" appear="false" persisted="false" css="true">
    <div data-v-92a4d159="" aria-hidden="true" class="absolute inset-0 bg-[radial-gradient(at_25%_30%,var(--accent-line),transparent_55%),radial-gradient(at_75%_70%,rgba(0,184,230,0.18),transparent_60%)]" data-testid="spotlight-backdrop-mesh"></div>
  </transition-stub>
  <!-- Shared right-edge vignette so foreground text remains AA-readable
         regardless of variant. -->
  <div data-v-92a4d159="" aria-hidden="true" class="absolute inset-0 bg-gradient-to-r from-transparent via-black/30 to-black/60"></div>
</div>"
`;

exports[`SpotlightBackdrop > gradient-mesh snapshot for accent=pink 1`] = `
"<!--
    Workstream hero-spotlight — v1.1-polish Phase 01 (HSB-V11-CC-01).

    Two-variant decorative backdrop that sits behind a spotlight card's
    foreground content. ALL elements are aria-hidden + pointer-events-none
    so they're invisible to assistive tech and inert to the cursor.

    Variants:
      poster-blur    — Renders a blurred + tinted <img> from \`posterUrl\`.
                       Reuses the card's existing poster URL — browser
                       cache hit. (Threat T-V11-01 in the plan threat
                       register.)
      gradient-mesh  — Renders an \`accent\`-tinted radial-gradient mesh.
                       No HTTP request.

    Both variants are overlaid with a shared right-side vignette so the
    foreground text (which sits on the left/center) stays readable.

    If \`variant === 'poster-blur'\` but \`posterUrl\` is missing/empty, we
    fall back to the gradient-mesh of the same accent so the card never
    renders against a fully transparent background.
  -->
<div data-v-92a4d159="" class="absolute inset-0 overflow-hidden pointer-events-none">
  <!-- DS shimmer while a COLD blur poster loads (2026-06-11 feedback:
         «скелетона нет на фоне») — warm URLs (session registry) skip it so
         carousel re-mounts never replay the loading state. -->
  <!--v-if-->
  <!-- Keyed wrapper + non-out-in Transition = CROSSFADE when the poster
         URL changes in place (RandomTail reroll, 2026-06-11): old blur
         fades out while the new (preloaded by the card) fades in — no
         re-fetch flash. The 0.4 opacity lives on the wrapper so the
         transition classes can animate it (an inline opacity on the <img>
         would beat the enter/leave classes). -->
  <transition-stub data-v-92a4d159="" name="backdrop-x" appear="false" persisted="false" css="true">
    <div data-v-92a4d159="" aria-hidden="true" class="absolute inset-0 bg-[radial-gradient(at_25%_30%,rgba(255,77,141,0.25),transparent_55%),radial-gradient(at_75%_70%,var(--brand-pink-soft),transparent_60%)]" data-testid="spotlight-backdrop-mesh"></div>
  </transition-stub>
  <!-- Shared right-edge vignette so foreground text remains AA-readable
         regardless of variant. -->
  <div data-v-92a4d159="" aria-hidden="true" class="absolute inset-0 bg-gradient-to-r from-transparent via-black/30 to-black/60"></div>
</div>"
`;

exports[`SpotlightBackdrop > gradient-mesh snapshot for accent=violet 1`] = `
"<!--
    Workstream hero-spotlight — v1.1-polish Phase 01 (HSB-V11-CC-01).

    Two-variant decorative backdrop that sits behind a spotlight card's
    foreground content. ALL elements are aria-hidden + pointer-events-none
    so they're invisible to assistive tech and inert to the cursor.

    Variants:
      poster-blur    — Renders a blurred + tinted <img> from \`posterUrl\`.
                       Reuses the card's existing poster URL — browser
                       cache hit. (Threat T-V11-01 in the plan threat
                       register.)
      gradient-mesh  — Renders an \`accent\`-tinted radial-gradient mesh.
                       No HTTP request.

    Both variants are overlaid with a shared right-side vignette so the
    foreground text (which sits on the left/center) stays readable.

    If \`variant === 'poster-blur'\` but \`posterUrl\` is missing/empty, we
    fall back to the gradient-mesh of the same accent so the card never
    renders against a fully transparent background.
  -->
<div data-v-92a4d159="" class="absolute inset-0 overflow-hidden pointer-events-none">
  <!-- DS shimmer while a COLD blur poster loads (2026-06-11 feedback:
         «скелетона нет на фоне») — warm URLs (session registry) skip it so
         carousel re-mounts never replay the loading state. -->
  <!--v-if-->
  <!-- Keyed wrapper + non-out-in Transition = CROSSFADE when the poster
         URL changes in place (RandomTail reroll, 2026-06-11): old blur
         fades out while the new (preloaded by the card) fades in — no
         re-fetch flash. The 0.4 opacity lives on the wrapper so the
         transition classes can animate it (an inline opacity on the <img>
         would beat the enter/leave classes). -->
  <transition-stub data-v-92a4d159="" name="backdrop-x" appear="false" persisted="false" css="true">
    <div data-v-92a4d159="" aria-hidden="true" class="absolute inset-0 bg-[radial-gradient(at_25%_30%,rgba(167,139,250,0.28),transparent_55%),radial-gradient(at_75%_70%,rgba(139,92,246,0.18),transparent_60%)]" data-testid="spotlight-backdrop-mesh"></div>
  </transition-stub>
  <!-- Shared right-edge vignette so foreground text remains AA-readable
         regardless of variant. -->
  <div data-v-92a4d159="" aria-hidden="true" class="absolute inset-0 bg-gradient-to-r from-transparent via-black/30 to-black/60"></div>
</div>"
`;

exports[`SpotlightBackdrop > poster-blur snapshot with mock URL 1`] = `
"<!--
    Workstream hero-spotlight — v1.1-polish Phase 01 (HSB-V11-CC-01).

    Two-variant decorative backdrop that sits behind a spotlight card's
    foreground content. ALL elements are aria-hidden + pointer-events-none
    so they're invisible to assistive tech and inert to the cursor.

    Variants:
      poster-blur    — Renders a blurred + tinted <img> from \`posterUrl\`.
                       Reuses the card's existing poster URL — browser
                       cache hit. (Threat T-V11-01 in the plan threat
                       register.)
      gradient-mesh  — Renders an \`accent\`-tinted radial-gradient mesh.
                       No HTTP request.

    Both variants are overlaid with a shared right-side vignette so the
    foreground text (which sits on the left/center) stays readable.

    If \`variant === 'poster-blur'\` but \`posterUrl\` is missing/empty, we
    fall back to the gradient-mesh of the same accent so the card never
    renders against a fully transparent background.
  -->
<div data-v-92a4d159="" class="absolute inset-0 overflow-hidden pointer-events-none">
  <!-- DS shimmer while a COLD blur poster loads (2026-06-11 feedback:
         «скелетона нет на фоне») — warm URLs (session registry) skip it so
         carousel re-mounts never replay the loading state. -->
  <div data-v-92a4d159="" aria-hidden="true" class="absolute inset-0 skeleton-shimmer opacity-50" data-testid="backdrop-skeleton"></div>
  <!-- Keyed wrapper + non-out-in Transition = CROSSFADE when the poster
         URL changes in place (RandomTail reroll, 2026-06-11): old blur
         fades out while the new (preloaded by the card) fades in — no
         re-fetch flash. The 0.4 opacity lives on the wrapper so the
         transition classes can animate it (an inline opacity on the <img>
         would beat the enter/leave classes). -->
  <transition-stub data-v-92a4d159="" name="backdrop-x" appear="false" persisted="false" css="true">
    <div data-v-92a4d159="" aria-hidden="true" class="absolute inset-0 opacity-40"><img data-v-92a4d159="" src="/api/streaming/image-proxy?url=https%3A%2F%2Fshikimori.one%2Fposter.jpg&amp;w=128" alt="" aria-hidden="true" decoding="async" class="absolute inset-0 w-full h-full object-cover scale-110" style="filter: blur(40px) saturate(1.2);"></div>
  </transition-stub>
  <!-- Shared right-edge vignette so foreground text remains AA-readable
         regardless of variant. -->
  <div data-v-92a4d159="" aria-hidden="true" class="absolute inset-0 bg-gradient-to-r from-transparent via-black/30 to-black/60"></div>
</div>"
`;
